# tec-media-file-system

./: .gitignore
TEC-Media-File-System/: TEC-Media-File-System.sln
TEC-Media-File-System/ControllerNode/: CMakeLists.txt  ControllerNode.vcxproj
TEC-Media-File-System/ControllerNode/include/Controller/: NodeController.h
TEC-Media-File-System/ControllerNode/include/Server/: Server.h  Starter.h
TEC-Media-File-System/ControllerNode/protos/: tec_mfs.proto
TEC-Media-File-System/ControllerNode/src/: main.cpp
TEC-Media-File-System/ControllerNode/src/Controller/: NodeController.cpp
TEC-Media-File-System/ControllerNode/src/Server/: Server.cpp  Starter.cpp
TEC-Media-File-System/DiskNode/: CMakeLists.txt  DiskNode.vcxproj
TEC-Media-File-System/DiskNode/include/ConfigLoader/: ConfigLoader.h
TEC-Media-File-System/DiskNode/include/DiskNode/: BlockStorageManager.h  DiskNodeService.h  Starter.h
TEC-Media-File-System/DiskNode/protos/: tec_mfs.proto
TEC-Media-File-System/DiskNode/src/: main.cpp
TEC-Media-File-System/DiskNode/src/ConfigLoader/: ConfigLoader.cpp
TEC-Media-File-System/DiskNode/src/DiskNode/: BlockStorageManager.cpp  DiskNodeService.cpp  Starter.cpp
TEC-Media-File-System/GUI-TEC-MFS/: app.py  viewManager.py
TEC-Media-File-System/GUI-TEC-MFS/protos/: tec_mfs.proto
TEC-Media-File-System/GUI-TEC-MFS/views/: connectView.py  filesView.py
TEC-Media-File-System/protos/: tec_mfs.pb.cc  tec_mfs.pb.h
